==> openmv/openmv/src/omv/ports/nrf/modules/py_audio.c <==
#include <stdio.h>
#include "py/obj.h"
#include "py/objarray.h"
#include "py/nlr.h"
#include "py/mphal.h"
#include "py/binary.h"
#include "pendsv.h"
#include "runtime.h"
#include "py_audio.h"
#include "py_assert.h"
#include "py_helper.h"
#include "fb_alloc.h"
#include "omv_boardconfig.h"
#include "common.h"
#include "nrfx_pdm.h"
#include "hal/nrf_gpio.h"
#define PDM_DEFAULT_GAIN     20
#define PDM_IRQ_PRIORITY     7
#define PDM_BUFFER_SIZE     (256)
#define NRF_PDM_FREQ_1280K  (nrf_pdm_freq_t)(0x0A000000UL)               ///< PDM_CLK= 1.280 MHz (32 MHz / 25) => Fs= 20000 Hz
#define NRF_PDM_FREQ_2000K  (nrf_pdm_freq_t)(0x10000000UL)               ///< PDM_CLK= 2.000 MHz (32 MHz / 16) => Fs= 31250 Hz
#define NRF_PDM_FREQ_2667K  (nrf_pdm_freq_t)(0x15000000UL)               ///< PDM_CLK= 2.667 MHz (32 MHz / 12) => Fs= 41667 Hz
#define NRF_PDM_FREQ_3200K  (nrf_pdm_freq_t)(0x19000000UL)               ///< PDM_CLK= 3.200 MHz (32 MHz / 10) => Fs= 50000 Hz
#define NRF_PDM_FREQ_4000K  (nrf_pdm_freq_t)(0x20000000UL)               ///< PDM_CLK= 4.000 MHz (32 MHz /  8) => Fs= 62500 Hz
#define RAISE_OS_EXCEPTION(msg)     mp_raise_msg(&mp_type_OSError, MP_ERROR_TEXT(msg))

static mp_obj_t py_audio_init(uint n_args, const mp_obj_t *args, mp_map_t *kw_args)
{
    // Read Args.
    g_channels = py_helper_keyword_int(n_args, args, 0, kw_args, MP_OBJ_NEW_QSTR(MP_QSTR_channels), 2);
    uint32_t frequency = py_helper_keyword_int(n_args, args, 1, kw_args, MP_OBJ_NEW_QSTR(MP_QSTR_frequency), 16000);
    int gain_db = py_helper_keyword_int(n_args, args, 2, kw_args, MP_OBJ_NEW_QSTR(MP_QSTR_gain_db), PDM_DEFAULT_GAIN);

    nrfx_pdm_config_t nrfx_pdm_config = {
        .pin_clk            = PDM_CLK_PIN,
        .pin_din            = PDM_DIN_PIN,
        .gain_l             = gain_db,
        .gain_r             = gain_db,
        .interrupt_priority = PDM_IRQ_PRIORITY,
    };

    // Enable high frequency oscillator if not already enabled
    if (NRF_CLOCK->EVENTS_HFCLKSTARTED == 0) {
        NRF_CLOCK->TASKS_HFCLKSTART    = 1;
        while (NRF_CLOCK->EVENTS_HFCLKSTARTED == 0) {
        }
    }

    // configure the sample rate and channels
    switch (frequency) {
        case 16000:
            NRF_PDM->RATIO = ((PDM_RATIO_RATIO_Ratio80 << PDM_RATIO_RATIO_Pos) & PDM_RATIO_RATIO_Msk);
            nrfx_pdm_config.clock_freq = NRF_PDM_FREQ_1280K;
            break;
        case 41667:
            nrfx_pdm_config.clock_freq = NRF_PDM_FREQ_2667K;
            break;
        default:
            RAISE_OS_EXCEPTION("Invalid frequency!");
    }

    switch (g_channels) {
        case 1:
            nrfx_pdm_config.mode = NRF_PDM_MODE_MONO;
            nrfx_pdm_config.edge = NRF_PDM_EDGE_LEFTFALLING;
            break;
        case 2:
            #if 0 // Disable 2 channels for now.
            nrfx_pdm_config.mode = NRF_PDM_MODE_STEREO;
            nrfx_pdm_config.edge = NRF_PDM_EDGE_LEFTFALLING;
            break;
            #endif
        default:
            RAISE_OS_EXCEPTION("Invalid number of channels! Expected 1 or 2.");
    }

    // Power the mic on.
    nrf_gpio_cfg_output(PDM_PWR_PIN);
    nrf_gpio_pin_set(PDM_PWR_PIN);

    // Allocate global PCM buffer.
    g_pcmbuf = mp_obj_new_bytearray_by_ref(PDM_BUFFER_SIZE * sizeof(int16_t), m_new(int16_t, PDM_BUFFER_SIZE));

    nrfx_pdm_init(&nrfx_pdm_config, nrfx_pdm_event_handler);
    return mp_const_none;
}

void py_audio_deinit()
{
    // Disable PDM and IRQ
    nrfx_pdm_uninit();

    // Power the mic off
    nrf_gpio_cfg_output(PDM_PWR_PIN);
    nrf_gpio_pin_clear(PDM_PWR_PIN);
    nrf_gpio_cfg_input(PDM_PWR_PIN, NRF_GPIO_PIN_PULLDOWN);

    g_channels = 0;
    g_pcmbuf = NULL;
    g_buf_index = 0;
    g_audio_callback = mp_const_none;
}

static void audio_pendsv_callback(void)
{
    memcpy(g_pcmbuf->items, PDM_BUFFERS[g_buf_index], PDM_BUFFER_SIZE * sizeof(int16_t));
    // Call user callback
    mp_call_function_1(g_audio_callback, MP_OBJ_FROM_PTR(g_pcmbuf));
}

static mp_obj_t py_audio_start_streaming(mp_obj_t callback_obj)
{
    g_audio_callback = callback_obj;

    if (!mp_obj_is_callable(g_audio_callback)) {
        g_audio_callback = mp_const_none;
        RAISE_OS_EXCEPTION("Invalid callback object!");
    }

    // Start PDM.
    if (nrfx_pdm_start() != NRFX_SUCCESS) {
        g_audio_callback = mp_const_none;
        RAISE_OS_EXCEPTION("PDM start failed!");
    }

    return mp_const_none;
}
